[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/icons/icon_hold.svg" type="Texture" id=5]
[ext_resource path="res://components/button_base/button_base.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.2, 0.2, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.4, 0.4, 0.4, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.4, 0.4, 0.4, 1 )

[node name="Button" type="Button"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_right = 12.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 1 )
shortcut_in_tooltip = false
expand_icon = true
script = ExtResource( 6 )
sound = "CLICK"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="Tween" type="Tween" parent="."]

[node name="ConfirmIcon" type="MarginContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_bottom = 36.0
mouse_filter = 2
custom_constants/margin_top = 4

[node name="Texture" type="TextureRect" parent="ConfirmIcon"]
modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
margin_top = 4.0
margin_right = 32.0
margin_bottom = 36.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
flip_v = true

[node name="Confirm" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
mouse_filter = 2

[node name="Center" type="CenterContainer" parent="Confirm"]
margin_left = -160.0
margin_top = -40.0
margin_right = 160.0
margin_bottom = -6.0
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="Confirm/Center"]
margin_left = 158.0
margin_top = 15.0
margin_right = 162.0
margin_bottom = 19.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )

[node name="Progress" type="Panel" parent="Confirm/Center/Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 296.0
margin_bottom = 32.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="Margin" type="MarginContainer" parent="Confirm/Center/Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 296.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 8
custom_constants/margin_top = 0
custom_constants/margin_left = 8
custom_constants/margin_bottom = 0

[node name="Label" type="Label" parent="Confirm/Center/Panel/Margin"]
margin_left = 8.0
margin_right = 286.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "T_HOLD_TO_CONFIRM"
valign = 1
uppercase = true

[node name="Polygon2D" type="Polygon2D" parent="Confirm/Center"]
show_behind_parent = true
position = Vector2( 160, 32 )
color = Color( 0.4, 0.4, 0.4, 1 )
polygon = PoolVector2Array( -8, 0, 8, 0, 0, 8 )

[connection signal="button_down" from="." to="." method="play_sound"]
[connection signal="button_down" from="." to="." method="confirm_start"]
[connection signal="button_up" from="." to="." method="confirm_cancel"]
[connection signal="pressed" from="." to="." method="prevent_double_click"]
[connection signal="timeout" from="Timer" to="." method="reenable"]
